--- a/helloworld.html
+++ b/helloworld.html
@@ -3,10 +3,23 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Hello World</title>
+    <title>CloSuit - Bringing Innovation and Technology in Fashion</title>
+    <link rel="stylesheet" href="css/styles.css">
 </head>
 <body>
-    <h1>Hello, everyone!</h1>
-    <p>Welcome to the Foundations of Frontend Web Development course </p>
+    <header>
+        <h1>Welcome to CloSuit</h1>
+    </header>
+    <nav>
+        <a href="#">Home</a>
+        <a href="#">Men</a>
+        <a href="#">Women</a>
+        <a href="#">Contact</a>
+    </nav>
+    <div class="container">
+        <img class="main-image" src="images/closuit-logo.png" alt="CloSuit Logo">
+        <div class="intro-text">
+            
 </body>
 </html>
+
